--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2429,12 +2429,18 @@ input, select, textarea {
 	table {
 		margin: 0 0 2em 0;
 		width: 100%;
+		table-layout: fixed;
 	}
 
 		table tbody tr {
 			border: solid 1px rgba(210, 215, 217, 0.75);
 			border-left: 0;
 			border-right: 0;
+			height: 1em;
+			overflow: hidden;
+			text-overflow: ellipsis;
+			white-space: nowrap;
+			vertical-align: bottom;
 		}
 
 			table tbody tr:nth-child(2n + 1) {
@@ -2443,6 +2449,10 @@ input, select, textarea {
 
 		table td {
 			padding: 0.75em 0.75em;
+			height: 1em;
+			overflow: hidden;
+			white-space: nowrap;
+			vertical-align: bottom;
 		}
 
 		table th {
@@ -2451,6 +2461,11 @@ input, select, textarea {
 			font-weight: 600;
 			padding: 0 0.75em 0.75em 0.75em;
 			text-align: left;
+			height: 1em;
+			overflow: hidden;
+			text-overflow: ellipsis;
+			vertical-align: bottom;
+			//white-space: nowrap;
 		}
 
 		table thead {
