--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2429,7 +2429,7 @@ input, select, textarea {
 	table {
 		margin: 0 0 2em 0;
 		width: 100%;
-		table-layout: fixed;
+		//table-layout: fixed;
 	}
 
 		table tbody tr {
@@ -2453,6 +2453,7 @@ input, select, textarea {
 			overflow: hidden;
 			white-space: nowrap;
 			vertical-align: bottom;
+			text-overflow: ellipsis;
 		}
 
 		table th {
